--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -158,6 +158,11 @@
     padding-bottom: 1%;
 }
 
+#names > div:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
 .line{
     width: 100%;
     border: .2px solid ;
