--- a/src/Components/Navbar/Menu/Menu.css
+++ b/src/Components/Navbar/Menu/Menu.css
@@ -117,11 +117,27 @@
     background-color: rgb(222,222,223);
 }
 
-#secondBox{
+.secondBox{
     overflow: scroll;
     height: 620px;
-    margin: 12% 0 0 3.2%  ;
+    margin: 12% 0 0 0%  ;
+     animation: abc .2s linear;
+     /* display: none; */
+    /* make display cut */
 }
+
+@keyframes abc{
+    from{
+        opacity: 0;
+        transform: translateX(-100px);
+
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
 
 #text{
     margin: 5% 15% 0 30.5% ;
@@ -226,13 +242,123 @@
 }
 
 
-#productBox{
+.productBox{
     
     overflow: scroll;
     height: 620px;
     margin: 12% 0 0 3.2%  ;
+    display: none;   
+    /* add display: none here */
+}
+
+.showBox{
+    display: block;
+}
+
+.hideBox{
     display: none;
 }
+
+#prodHeading{
+    display: flex;
+    margin: 6% 0 0 11%;
+    gap: 10%;
+}
+
+#arrowBox{
+    /* margin: 0 0 0 20%; */
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    box-sizing: border-box;
+    padding: 24% 0 0 22%;
+}
+
+#backArrIcon{
+    font-size: 1.3vw;
+
+}
+
+
+#arrowBox:hover{
+    background-color: rgb(245, 245, 245);
+    cursor: pointer;
+}
+
+
+#arrowBox:active{
+    background-color: rgb(222,222,223);
+}
+
+#prodHeading > div:nth-child(2){
+    font-size: 1.5vw;
+    font-weight: 600;
+    margin-top: .5%;
+}
+
+
+#prodText{
+    margin: 8% 0 0 29%;
+}
+
+#prodText > div:nth-child(1) > div{
+    width: 80%;
+    font-size: .95vw;
+    font-weight: 700;
+    margin-bottom: 4%;
+}
+
+#prodText > div:nth-child(1) > div:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#prodText > div:nth-child(2) {
+    margin-top: 10%;
+}
+
+#prodText > div:nth-child(2) > div{
+    width: 80%;
+    font-size: .95vw;
+    font-weight: 400;
+    
+    margin-bottom: 4%;
+}
+
+
+#prodText > div:nth-child(2) > div:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+
+.furnitureBox{
+    width: 320px;
+    height: 750px;
+    position: absolute;
+    top: -67px;
+    left: 434px;
+    background-color: white;
+    animation: fur 0.2s linear;
+}
+
+@keyframes fur{
+    from{
+        opacity: 0;
+        transform: translateX(-200px);
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+.non{
+    display: none;
+}
+
+
+
+
 
 div{
     /* border: 1px solid black; */
