--- a/src/Components/Navbar/Menu/Menu.css
+++ b/src/Components/Navbar/Menu/Menu.css
@@ -332,7 +332,7 @@
 }
 
 
-.furnitureBox{
+.ProdBox{
     width: 320px;
     height: 750px;
     position: absolute;
@@ -352,9 +352,32 @@
         transform: translateX(0px);
     }
 }
+
 .non{
     display: none;
 }
+
+.KitchBox{
+    width: 320px;
+    height: 750px;
+    position: absolute;
+    top: -67px;
+    left: 434px;
+    background-color: white;
+    animation: fur 0.2s linear;
+}
+
+@keyframes fur{
+    from{
+        opacity: 0;
+        transform: translateX(-200px);
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
 
 
 
