--- a/src/Components/Shop/top Cat/TopCat.css
+++ b/src/Components/Shop/top Cat/TopCat.css
@@ -1,13 +1,35 @@
 #firstCat{
     display: grid;
-    grid-template-columns: auto auto auto auto auto;
-    grid-gap: 2%;
+    grid-template-columns: 18.8% 18.8% 18.8% 18.8% 18.8%;
+    grid-gap: 1.5%;
+    margin-top: 5%;
 }
 
-#box{
-    height: 100%;
+
+#imgDiv >img {
+   width: 100%;
+   /* z-index: -1; */
+   position: relative;
+   z-index: -1;
 }
 
-#imgDiv{
+#onImgBox{
+    /* margin: -30% 0 0 7% ; */
+    margin: -30% auto auto auto;
+    max-width: 150px;
+    height: 40px;
+    background-color: white;
+    text-align: center;
+    box-sizing: border-box;
+    border-radius: 20px;
+    font-size: 0.8vw;
+    padding-top: 5%;
+    text-align: center;
+    font-weight: 700;
     
+}
+
+#onImgBox:hover{
+    opacity: .95;
+    cursor: pointer;
 }
