family offer completed

--- a/src/Components/Navbar/Menu/Menu.css
+++ b/src/Components/Navbar/Menu/Menu.css
@@ -8,10 +8,12 @@
 
 #menuIconBox{
     position: fixed;
+    /* display: flex; */
+    /* align-items: center; */
     top: 9.2%;
     left: 3%;
-    width: 40px;
-    height: 40px;
+    width: 2.5rem;
+    height: 2.5rem;
     border-radius: 50%;
     box-sizing: border-box;
     padding: .5% 0 0 0.45% ;
@@ -63,10 +65,14 @@
     overflow: scroll;
 }
 
-::-webkit-scrollbar {
+.show::-webkit-scrollbar {
   display: none;
 }
 
+
+.secondBox::-webkit-scrollbar {
+  display: none;
+}
 @keyframes slideIn{
     0%{
         transform: translateX(-482px);
@@ -251,6 +257,11 @@
     /* add display: none here */
 }
 
+
+.productBox::-webkit-scrollbar {
+  display: none;
+}
+
 .showBox{
     display: block;
 }
@@ -380,6 +391,11 @@
 
 .pShow{
     display: block;
+}
+
+
+#Box::-webkit-scrollbar {
+  display: none;
 }
 
 .pHide{
