--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -286,6 +286,11 @@ div{
 
 #itemBox >div:hover{
     cursor: pointer;
+
+}
+
+#itemBox > div:hover >div:nth-child(3){
+    text-decoration: underline;
 }
 
 #itemBox >div:hover #prodImgBox{
@@ -355,16 +360,161 @@ div{
     transition: .3s all linear;
 }
 
+#shopNowB{
+    width: 90px;
+    height: 40px;
+    background-color: black;
+    border-radius: 20px;
+    margin: 1% 0 0 9%;
+    color: white;
+    font-size: .8vw;
+    box-sizing: border-box;
+    font-weight: 700;
+    text-align: center;
+    padding: .65% 0 0 0;
+}
 
-
-#threeBox{
-
+#shopNowB:hover{
+    opacity: .8;
+    transition: .2s linear all;
+    cursor: pointer;
 }
 
 
+#threeBox{
+    
+    border-top: 1px solid rgb(223,222,222);
+    width: 88%;
+    height: 600px;
+    margin: 4.5% 0 0 8.8%;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: 32% 32% 32%;
+    grid-gap: 2%;
+    padding-top:4% ;
+
+}
+
+.TimgBox{
+    width: 100%;
+    height: 80%;
+}
+
+.tBoxHead{
+    font-size: 1.6vw;
+    font-weight: 700;
+    margin-top: 7%;
+}
+
+
+#susHomeBox{
+    border-top: 1px solid rgb(223,222,222);
+    width: 88%;
+    margin: 2% 0 0 8.8%;
+    box-sizing: border-box;
+    padding-top: 4%;
+    font-size: 1.6vw;
+    font-weight: 700;
+}
+
+#susProdBox{
+    margin-top: 3%;
+    /* border: 1px solid black; */
+    height: 340px;
+    box-sizing: border-box;
+    padding-bottom: 2%;
+    overflow-y: scroll;
+    overflow-y: hidden;
+    display: grid;
+    grid-gap: 1.5%;
+    grid-template-columns: 17% 17% 17% 17% 17% 17% 17% 17%;
+    grid-template-rows: 100%;
+    scroll-behavior: smooth;
+}
+
+
+
+#susProdBox::-webkit-scrollbar {
+  height: 3px;
+}
+
+
+#susProdBox::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 3px rgb(223,222,222); 
+  border-radius: 3px;
+}
+
+
+ 
+#susProdBox::-webkit-scrollbar-thumb {
+  background: black; 
+  border-radius: 3px;
+}
+
+#susProdBox::-webkit-scrollbar:hover {
+  width: 5px;
+  height: 10px;
+  cursor: grab;
+}
+
+#firstBoxG{
+    background-color: rgb(31,132,72);
+}
+
+#greenBoxT{
+    font-size: 1.1vw;
+    color: white;
+    margin: 15% 0 0 6%;
+}
+
+#circleGreen{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: white;
+    margin: 70% 0 0 6% ;
+    box-sizing: border-box;
+    text-align: center;
+    padding-top: 2%;
+}
+
+#GBIcon{
+    font-size: 1.3vw;
+}
+
+#susBoxImg{
+    width: 100%;
+    height: 100%;
+     z-index: -1;
+}
+
+#susBoxImg > img{
+    z-index: -1;
+    position: relative;
+}
+
+#susBoxG{
+    width: 60%;
+    height: 40px;
+    border-radius: 20px;
+    background-color: white;
+    z-index: 1;
+    margin: -35% auto auto auto;
+    text-align: center;
+    font-size: .8vw;
+    box-sizing: border-box;
+    padding-top: 5%;
+}
+
+#susBoxG:hover{
+    opacity: .9;
+    transition: .1s all linear ;
+    cursor: pointer;
+}
+
 #empty{
     margin-top: 2%;
-    height: 400px;
+    height: 800px;
 }
 
 div{
