--- a/src/Components/Home/CSS/Gamepage.css
+++ b/src/Components/Home/CSS/Gamepage.css
@@ -7,12 +7,12 @@
 }
 
 .filter_box{
-    border:1px solid black;
-    width:100%;
-    height:90px;
+    margin-top: 1%;
+    width:88%;
+    height:110px;
     border-bottom:1px solid rgba(160, 157, 157, 0.123); 
     background-color:#ffffff ;
-    
+    margin-left: 8.8%;
     align-items: center;
     position: sticky;
     top:0;
@@ -23,8 +23,8 @@
 
 
 .select_button{
-    margin-top: 1%;
-    margin-left: 2%;
+    margin-top: 4.5%;
+    margin-right: 2%;
     position: relative;
     font-size: .875rem;
     background: none;
@@ -44,7 +44,7 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.4, 1);
     justify-content: center;
     align-items: center;
-    height: 3.0rem;
+    height: 2.6rem;
     padding: 0 1rem;
     color: #111;
     background: #f5f5f5;
@@ -52,10 +52,43 @@
     font-family:"Noto IKEA", "Noto Sans", "Roboto", "Open Sans", system-ui, sans-serif;
     
   
-   
-   
-
 }
+
+
+
+.select_button_black{
+    margin-top: 4.5%;
+    margin-right: 2%;
+    position: relative;
+    font-size: .875rem;
+    background: none;
+    border: 0;
+    padding: 0;
+    
+    font-weight: bold;
+    text-align: center;
+    display: inline-flex;
+    border-radius: 64px;
+    cursor: pointer;
+    outline: 0;
+    vertical-align: top;
+    border-radius: 64px;
+    transition-property: opacity,transform;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.4, 1);
+    justify-content: center;
+    align-items: center;
+    height: 2.6rem;
+    padding: 0 1rem;
+    background-color: #111;
+    color: #f5f5f5;
+    border: 1px solid #f5f5f5;
+    font-family:"Noto IKEA", "Noto Sans", "Roboto", "Open Sans", system-ui, sans-serif;
+    
+  
+}
+
+
 
 .select_button:hover{
     background: #dddbdb;
@@ -88,3 +121,122 @@
        margin-left: 4%;
        margin-right: 4%;
    }
+
+ 
+
+   #shortDropdown {
+    margin-top: 4.5%;
+    margin-right: 2%;
+    position: absolute;
+    top: 55px;
+    display: grid;
+    width: 300px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    background-color: white;
+    border-radius: 15px;
+    height: 500px;
+   
+   
+    overflow: scroll;
+   
+  }
+  #shortDropdown > div {
+    display: grid;
+    grid-template-columns: 80% 20%;
+    justify-content: space-around;
+    padding: 15px;
+  }
+  #shortDropdown label {
+    font-size: 15px;
+    color: #484848;
+  }
+
+
+
+
+
+  .arrowdown{
+      margin-left: 10px;
+      width:16px;
+  }
+
+  .rotate{
+      transform: rotate(180deg);
+      margin-left: 10px;
+      width:16px;
+      filter: invert(1);
+
+  }
+
+
+  #catdrop {
+    margin-top: 4.5%;
+    margin-right: 2%;
+    position: absolute;
+    left: 95px;
+    top: 55px;
+    display: grid;
+    width: 300px;
+    height: 250px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    background-color: white;
+    border-radius: 15px;
+    overflow-y: scroll;
+    
+    z-index: 1;
+  }
+  #catdrop > div,
+  #seatsdrop > div,
+  #pricedrop > div,
+  #matdrop > div {
+    display: grid;
+    grid-template-columns: 80% 20%;
+    justify-content: space-around;
+    padding: 15px;
+  }
+  #catdrop label,
+  #seatsdrop label,
+  #pricedrop label,
+  #matdrop label {
+    font-size: 14px;
+    color: #484848;
+  }
+
+  #pricedrop {
+    margin-top: 4.5%;
+    margin-right: 2%;
+    position: absolute;
+    left: 270px;
+    top: 55px;
+    display: grid;
+    
+    width: 300px;
+    height: 200px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    background-color: white;
+    border-radius: 15px;
+    
+    overflow-y: scroll;
+    
+    
+    z-index: 1;
+  }
+  
+
+  /* material drop */
+#matdrop {
+    margin-top: 4.5%;
+    margin-right: 2%;
+    position: absolute;
+    left: 495px;
+    top: 55px;
+    display: grid;
+    width: 300px;
+    height: 200px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    background-color: white;
+    border-radius: 15px;
+    overflow-y: scroll;
+    
+    z-index: 1;
+  }
