--- a/src/Components/Navbar/Menu/Menu.css
+++ b/src/Components/Navbar/Menu/Menu.css
@@ -63,6 +63,8 @@
     background-color: white;
     animation:  .2s linear slideIn ;
     overflow: scroll;
+    z-index: 1;
+    position: relative;
 }
 
 .show::-webkit-scrollbar {
@@ -253,7 +255,9 @@
     overflow: scroll;
     height: 620px;
     margin: 12% 0 0 3.2%  ;
-    display: none;   
+    display: none;  
+    z-index: 1;
+    position: relative; 
     /* add display: none here */
 }
 
@@ -351,6 +355,8 @@
     left: 434px;
     background-color: white;
     animation: fur 0.2s linear;
+    z-index: 1;
+    /* position: relative; */
 }
 
 @keyframes fur{
