--- a/src/Components/Home/CSS/Gamepage.css
+++ b/src/Components/Home/CSS/Gamepage.css
@@ -7,16 +7,115 @@
 }
 
 .filter_box{
-    margin-top: 1%;
+    /*margin-top: 1%; */
     width:88%;
     height:110px;
-    border-bottom:1px solid rgba(160, 157, 157, 0.123); 
+    border-bottom:1px solid rgba(104, 102, 102, 0.123); 
     background-color:#ffffff ;
     margin-left: 8.8%;
     align-items: center;
     position: sticky;
     top:0;
+    z-index: 0;
+    
 }
+
+
+.upper_box{
+  margin-left: 8.4%;
+  width:90%;
+  height: 590px;
+  /*border: 1px solid red;*/ 
+}
+
+.lower_box{
+  margin-left: 8.4%;
+  width:90%;
+ /* border: 1px solid rgb(236, 49, 49); */ 
+
+}
+
+
+.game_head{
+    margin-left: 1%;
+    overflow-wrap: break-word;
+    margin-top: 5%;
+    margin-bottom: 3%;
+    line-height: 1.3334;
+    letter-spacing: -0.42px;
+    color: #111111;
+    font-size: 1.8rem;
+    line-height: 1.45;
+    letter-spacing: -0.0042em;
+    font-weight: 700;
+}
+
+
+
+.head_sub_left_div{
+  width:58%;
+  height: 200px;
+  /*border: 1px solid blueviolet; */ 
+  margin-top: 3%;
+  margin-left: 1%;
+}
+
+
+.lowerhead_sub_left_div{
+  width:58%;
+ 
+ /* border: 1px solid rgb(8, 195, 241); */
+  margin-top: 3%;
+  margin-left: 1%;
+
+}
+
+
+
+.head_img_box{
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 1rem;
+}
+
+.head_icon{
+  margin-left: 1%;
+  width:32%;
+}
+
+.h2_head{
+  
+  color: #111;
+  font-size: 1.500rem;
+  line-height: 1.444;
+  font-family:"Noto IKEA", "Noto Sans", "Roboto", "Open Sans", system-ui, sans-serif;
+  font-weight: 700;
+}
+
+.h3_head{
+    font-size: 1.500rem;
+    color: #111;
+    font-size: 1rem;
+    line-height: 1.5;
+    font-weight: 700;
+}
+
+.head_p{
+    display: block;
+    font-size: 0.96rem;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-family:"Noto IKEA", "Noto Sans", "Roboto", "Open Sans", system-ui, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    word-break: break-word;
+    color:#4a4b4d;
+}
+
+
+
 
 
 
@@ -50,7 +149,7 @@
     background: #f5f5f5;
     border: 1px solid #f5f5f5;
     font-family:"Noto IKEA", "Noto Sans", "Roboto", "Open Sans", system-ui, sans-serif;
-    
+    z-index: 1;
   
 }
 
@@ -84,7 +183,7 @@
     color: #f5f5f5;
     border: 1px solid #f5f5f5;
     font-family:"Noto IKEA", "Noto Sans", "Roboto", "Open Sans", system-ui, sans-serif;
-    
+    z-index: 1;
   
 }
 
@@ -121,7 +220,17 @@
        margin-left: 4%;
        margin-right: 4%;
    }
+  
+   input[type="radio"] {
+    transform: scale(1.6);
+    color: #555;
+  }
 
+  input[type="checkbox"] {
+    transform: scale(1.6);
+    color: #555;
+  }
+ 
  
 
    #shortDropdown {
