--- a/src/Components/Home/CSS/Cart.css
+++ b/src/Components/Home/CSS/Cart.css
@@ -1,26 +1,143 @@
 .downicon{
-    width:18px;
+    width: 9px;
+    margin-left: 15%;
+    color: #484848;
+    transform: scale(0.4);
+
 }
 
 .printericon{
     width:30px;
+    margin-left: 15%;
+    color: #484848;
 
 }
 
 
 
 
-.cart_productdiv{
-  width: 700px;
-  height: 230px;
-  border: 1px solid red;
+.cart_product{
+  width: 730px;
+  height: 200px;
+ /* border: 1px solid red; */
+  display: grid;
+  grid-template-columns: 25% 40% 30%;
+  gap: 2%;
+  margin-bottom: 2%;
+}
+
+.del_button{
+ 
+ width: 1.5rem;
+height: 1.5rem;
+vertical-align: -6px;
+max-width: 1.5rem;
+margin-right: .5rem;
+padding:1px;
+
+/*border: 1px solid greenyellow; */
+  
+}
+
+
+.bold_title{
+  font-weight: 700;
+text-transform: uppercase;
+color: #000;
+line-height: 1.5;
+font-size: 0.98rem;
+margin-left: 4%;
+margin-top: 1%;
+}
+
+.H_bold{
+  font-weight: 700;
+  font-size: 1.6rem;
+  color: #000;
+  
+    
+}
+
+
+.bold_title:hover {
+  text-decoration: underline;
+}
+
+
+
+.desc_title{
+  margin-left: 4%;
+ font-size: .875rem;
+ line-height: 1.42857;
+ letter-spacing: 0;
+ font-weight: 400;
+ font-size: .875rem;
+ line-height: 1.5;
+ color: #484848;
+
+}
+
+.right_text{
+ /* border: 1px solid goldenrod; */
+}
+
+
+.price_text{
+ /* border: 1px solid slateblue; */
+}
+
+.down_arrow{
+  width: 20px;
+  margin-left: 50px;
+}
+
+.del_count{
+  margin-left: 15%;
+  display: flex;
+  border: 1px solid rgb(180, 176, 176);
+  border-radius: 0.1rem;
+  width: 90px;
+}
+
+.sub{
+  color:#000;
+  font-size: 1.08rem;
+  font-weight: 700;
+  
+
+}
+
+.mar{
+  margin-left: 6px;
+}
+
+.rs{
+  margin-top: 5px;
+  margin-left: 70%;
+  color:#000;
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+
+.util_div{
+  display:flex;
+  /*border: 1px solid red; */
+  margin-top: 60%;
+  margin-left: 30%;
 }
 
 
 .cart_p_icon{
-  width:150px;
+  width:90%;
+  margin: 5%;
+ /* border:1px solid rgb(171, 228, 15); */
 }
 
+.cart_prod_text{
+  width:98%;
+ /* border:1px solid blue; */
+
+}
 
 
 
@@ -72,10 +189,12 @@
   }
   
   .shopping {
+    
     display: flex;
     align-items: center;
-    /* border: 1px solid red; */
+     /* border: 1px solid blue; */
     width: 300px;
+    margin-bottom: 8%;
   }
   
   .shopping div {
@@ -274,6 +393,7 @@
   }
   
   .recieve p {
+    margin-top: 1%;
     text-align: center;
     text-decoration: none;
     cursor: text;
@@ -283,6 +403,7 @@
   
   .recieve-bottom {
     /* border: 1px solid red; */
+    margin-top: 3%;
     width: 70%;
     height: 50%;
     margin: auto;
@@ -303,21 +424,32 @@
     border: 0;
     padding: 0;
   }
+
+
+  .invert_icon{
+    filter: invert(1);
+    margin-top: 4.2%;
+  }
+
   
   .one-r {
-    /* border: 1px solid blue; */
+   /* border: 1px solid blue; */ 
+    margin-top: 5%;
     width: 25%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 4%;
   }
   
   .two-r {
     /* border: 1px solid blue; */
+    margin-top: 5%;
     width: 25%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 4%;
   }
   
   .cart-main-bottom {
