--- a/src/Components/FrontCart/Cart.css
+++ b/src/Components/FrontCart/Cart.css
@@ -455,8 +455,8 @@ margin-top: 1%;
   .cart-main-bottom {
     /* border: 1px solid blue; */
     height: 140px;
-    width: 100%;
-    margin: auto;
+    width: 90%;
+    margin: 3% auto auto auto;
     display: grid;
     grid-template-columns: repeat(3, 30%);
     gap: 5%;
@@ -527,9 +527,49 @@ margin-top: 1%;
     cursor: pointer;
   }
 
-  /* #goToShippingBtn{
+  #goToShippingBtn{
+    cursor: pointer;
+                    outline: 0;
+                    color: #fff;
+                    background-color: #0d6efd;
+                    border-color: #0d6efd;
+                    width: 20%;
+                    height: 45px;
+                    margin-left:40% ;
+                    display: inline-block;
+                    font-weight: 400;
+                    line-height: 1.5;
+                    text-align: center;
+                    border: 1px solid transparent;
+                    /* padding: 8px 12px; */
+                    font-size: 16px;
+                    border-radius: .25rem;
+                    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+                    box-sizing: border-box;
+                    padding-top: .7%;
 
-  } */
+  }
+
+  #goToShippingBtn:hover {
+                        color: #fff;
+                        background-color: #0b5ed7;
+                        border-color: #0a58ca;
+                    }
+
+
+.cartTruck{
+  font-size: 2vw;
+  margin-top: 6%;
+}
+
+.bigTruck{
+  font-size: 2.5vw;
+  margin-left: 1%;
+}
+
+  div{
+    /* border: 1px solid black; */
+  }
 
 
 
